<resources>
    <string name="app_name">Pelatihan Karyawan PTPN III</string>
    <string name="training">Pelatihan Karyawan %1s</string>
    <string name="pelatihan">Pelatihan</string>
    <string name="list_employee">List Karyawan</string>
    <string name="employee">Karyawan</string>
    <string name="detail_employee">Detail Karyawan %1s</string>
    <string name="add_employee">Tambah %1s</string>
    <string name="training_employee_his_join">Daftar Karyawan yang mengikuti pelatihan %1s</string>
    <string name="your_name">Nama anda</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="your_nkr">NRK Anda</string>
    <string name="your_jabatan">Jabatan anda</string>
    <string name="your_unit_kebun">Unit kebun anda</string>
    <string name="nothing_data_to_show">Tidak ada data karyawan</string>
    <string name="succesfully_delete_toast">Data %1s berhasil dihapus</string>
    <string name="yes">Yakin</string>
    <string name="successfully_add_toast">Berhasil menambahkan data</string>
    <string name="no">Tidak</string>
    <string name="message_dialog">Apakah anda yakin ingin menghapus %1s ?</string>
    <string name="title_dialog">Hapus %1s</string>
    <string name="cari_disini">Cari berdasarkan nama dan nrk</string>
    <string name="succesfully_delete_all_data">Data berhasil dihapus semua</string>
    <string name="title_delete_all">Hapus semua data</string>
    <string name="message_delete_all">Apakah anda ingin menghapus semua karyawan ?</string>
    <string name="name_training">Nama Pelatihan</string>
    <string name="start_training">Tanggal Mulai Pelatihan</string>
    <string name="end_training">Tanggal Akhir Pelatihan</string>
    <string name="attention_your_input">Perhatikan kembali inputan anda!!</string>
    <string name="start_training_not_be_empty">Mulai pelatihan perlu diisi</string>
    <string name="end_training_not_be_empty">Akhir pelatihan perlu diisi</string>
    <string name="name_training_not_be_empty">Nama pelatihan perlu diisi</string>
    <string name="not_be_empty_employee">%1s perlu diisi</string>
    <string name="confirmation_data">Konfirmasi Data</string>
    <string name="edit_data">Ubah Data</string>
    <string name="delete_data">Hapus Data</string>
    <string name="tombol_hapus">Tombol Hapus</string>
    <string name="tombol_bersihkan">Tombol Bersihkan</string>
    <string name="nothing_data_in_here">Tidak ada data disini</string>
    <string name="name_detail_training">List Pelatihan Yang Terdaftar</string>
</resources>