<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    android:focusable="true"
    android:clickable="true"
    app:cardElevation="5dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:id="@+id/name_employee"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/your_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_employee"
            android:id="@+id/nkr_employee"
            android:layout_marginTop="5dp"
            android:text="@string/your_nkr" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nkr_employee"
            android:text="@string/your_jabatan"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:id="@+id/jabatan_employee" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jabatan_employee"
            android:layout_marginTop="5dp"
            android:text="@string/your_unit_kebun"
            android:id="@+id/unit_kebun_employee" />


        <ImageButton
            android:contentDescription="@string/tombol_hapus"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="@drawable/bg_close"
            app:layout_constraintTop_toBottomOf="@id/unit_kebun_employee"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_delete"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>